--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family:'Noto Sans JP', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', sans-serif, system-ui, Avenir, Helvetica, Arial, ;
   line-height: 1.5;
   font-weight: 400;
 
