--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,6 @@
 #root {
-  max-width: 96%;
   margin: 0 auto;
+  max-width: 920px;
   text-align: center;
 }
 
@@ -247,8 +247,8 @@
   color: #333;
   text-align: left;
   overflow: auto;
-  max-height: 35vh;
-  padding-bottom: 2.5em;
+  max-height: 50vh;
+  /*padding-bottom: 2.5em;*/
   flex: 1 1 auto;
   min-height: 0;
   line-height: 2.5;
