出力用表示調整

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   font-family:'Noto Sans JP', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', sans-serif, system-ui, Avenir, Helvetica, Arial, ;
   line-height: 1.5;
